--- a/style.css
+++ b/style.css
@@ -1,5 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;1,900&display=swap');
+
+hr {
+    margin: 15px;
+}
+
+.titulo-pagina {
+    text-align: center;
+    font-style: italic;
+    font-size: 3em;
+    font-weight: 900;
+    font-family: 'Roboto', sans-serif;
+    color: darkblue;
+    margin: 10px;
+}
+
+.menu-navegacao {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+}
+
+.menu-navegacao ul {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+}
+
+.menu-navegacao li {
+  padding: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 1.3em;   
+  
+}
+
+a {
+    text-decoration: none;
+}
+
+.menu-navegacao a:hover{
+    background-color: cyan
+}
+
+.nome-da-propriedade {
+    font-size: 2em;
+    font-weight: 500px;
+    font-family: 'Roboto', sans-serif;
+    color: blue;
+    padding: 20px;
+}
+
+.nome-da-propriedade-shorthand {
+    font-size: 2em;
+    font-weight: 500px;
+    font-family: 'Roboto', sans-serif;
+    color: green;
+    padding: 20px;
+}
+
+.valor-da-propriedade {
+    font-size: 1,5em;
+    font-weight: 400px;
+    font-family: 'Roboto', sans-serif;
+    color: black;
+    padding: 30px;
+}
+
 .bloco-1 {
-    background-color: rgb(230, 215, 16);
+    background-color: lightblue;
     height: 150px;
     width: 150px;
     text-align: center;
@@ -9,7 +77,7 @@
 }
 
 .bloco-2 {
-    background-color: rgb(236, 11, 188);
+    background-color: lightpink;
     height: 150px;
     width: 150px;
     text-align: center;
@@ -19,7 +87,7 @@
 }
 
 .bloco-3 {
-    background-color: rgb(16, 240, 191);
+    background-color: red;
     height: 150px;
     width: 150px;
     text-align: center;
@@ -29,7 +97,7 @@
 }
 
 .bloco-1-sem-altura {
-    background-color:rgb(13, 9, 216);
+    background-color: lightblue;
 
     width: 150px;
     text-align: center;
@@ -39,7 +107,7 @@
 }
 
 .bloco-2-sem-altura {
-    background-color: rgb(76, 98, 173);
+    background-color: lightpink;
 
     width: 150px;
     text-align: center;
@@ -48,8 +116,38 @@
     border-radius: 16px;
 }
 
+.bloco-1-fontes-diferentes {
+    background-color: lightblue;
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 16px;
+}
+
+.bloco-2-fontes-diferentes {
+    background-color: lightpink;
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    font-size: 60px;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 16px;
+}
+
+.bloco-3-fontes-diferentes {
+    background-color: red;
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    font-size: 90px;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 16px;
+}
+
 .bloco-3-sem-altura {
-    background-color: rgb(131, 170, 228);
+    background-color: red;
 
     width: 150px;
     text-align: center;
@@ -62,7 +160,7 @@
     display: flex;
     flex-direction: row;
     /* indiferente */
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
@@ -71,7 +169,7 @@
     display: flex;
     flex-direction: row;
     /* indiferente */
-    background-color:rgba(255, 255, 255, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
@@ -80,7 +178,7 @@
     display: flex;
     flex-direction: column;
     /* indiferente */
-    background-color:rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
@@ -89,7 +187,8 @@
     display: flex;
     flex-direction: column-reverse;
     /* indiferente */
-    background-color:rgba(255, 255, 255, 0.76);
+    background-color: #f9eac3;
+    padding: 16px;
     height: 500px;
 }
 
@@ -97,7 +196,7 @@
     display: flex;
     flex-direction: row-reverse;
     /* indiferente */
-    background-color:rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
@@ -107,7 +206,7 @@
     flex-direction: row;
     justify-content: center;
     /* indiferente */
-    background-color:rgba(255, 255, 255, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
@@ -117,7 +216,7 @@
     flex-direction: row;
     justify-content: flex-start;
     /* indiferente */
-    background-color:rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
@@ -127,7 +226,7 @@
     flex-direction: row;
     justify-content: flex-end;
     /* indiferente */
-    background-color:rgba(255, 255, 255, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
@@ -137,7 +236,7 @@
     flex-direction: row;
     justify-content: space-between;
     /* indiferente */
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
@@ -147,7 +246,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     /* indiferente */
-    background-color:rgba(255, 255, 255, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
@@ -157,18 +256,18 @@
     flex-direction: row;
     justify-content: space-around;
     /* indiferente */
-    background-color:rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
-
+/* alinha os itens no centro no eixo principal*/
 .container-alignitems-center {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     /* indiferente */
-    background-color:rgba(255, 255, 255, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
@@ -179,7 +278,7 @@
     justify-content: center;
     align-items: flex-start;
     /* indiferente */
-    background-color:rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 
@@ -191,102 +290,160 @@
     justify-content: center;
     align-items: flex-end;
     /* indiferente */
-    background-color: rgba(255, 255, 255, 0.76)3;
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 
 }
-
+/* estica os itens, utilizando elementos sem altura*/
 .container-alignitems-stretch {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: stretch;
     /* indiferente */
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
 
-.bloco-1-fontes-diferentes {
-    background-color: rgb(216, 9, 9);
-    height: 150px;
-    width: 150px;
-    text-align: center;
-    font-size: 40px;
-    font-family: 'Courier New', Courier, monospace;
-    border-radius: 16px;
-}
-
-.bloco-2-fontes-diferentes{
-    background-color: rgb(185, 40, 178);
-    height: 150px;
-    width: 150px;
-    text-align: center;
-    font-size: 80px;
-    font-family: 'Courier New', Courier, monospace;
-    border-radius: 16px;
-}
-
-.bloco-3-fontes-diferentes {
-    background-color: rgb(49, 175, 60);
-    height: 150px;
-    width: 150px;
-    text-align: center;
-    font-size: 100px;
-    font-family: 'Courier New', Courier, monospace;
-    border-radius: 16px;
-}
-
-.container-alignitems-baseline {
+.container-alignitems-baseline
+{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: baseline;
     /* indiferente */
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
 }
 
-.container-flexwrap-nowrap {
+.container-flexwrap-nowrap{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: baseline;
+    align-items: center;
     flex-wrap: nowrap;
     /* indiferente */
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
-   
-
 }
 
-.container-flexwrap-wrap {
-
+.container-flexwrap-wrap{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: baseline;
+    align-items: center;
     flex-wrap: wrap;
     /* indiferente */
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
-
 }
-
-.container-wrap-reverse {
+.container-flexwrap-wrapreverse{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: baseline;
+    align-items: center;
     flex-wrap: wrap-reverse;
     /* indiferente */
-    background-color: rgba(0, 0, 0, 0.76);
+    background-color: #f9eac3;
     padding: 16px;
     height: 500px;
+}
 
+.container-flexflow-row-nowrap
+{
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: center;
+    align-items: center;
+    /* flex-wrap: nowrap; */
+    flex-flow: row nowrap;
+    /* indiferente */
+    background-color: #f9eac3;
+    padding: 16px;
+    height: 500px;
+}
 
+.container-align-content-center{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: center;
+    /* indiferente */
+    background-color: #f9eac3;
+    padding: 16px;
+    height: 500px;
+}
+
+.container-align-content-flexstart{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    /* indiferente */
+    background-color: #f9eac3;
+    padding: 16px;
+    height: 500px;
+}
+
+.container-align-content-flexend
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    /* indiferente */
+    background-color: #f9eac3;
+    padding: 16px;
+    height: 500px;
+}
+.container-align-content-spacebetween
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: space-between;
+    /* indiferente */
+    background-color: #f9eac3;
+    padding: 16px;
+    height: 500px;
+}
+
+.container-align-content-spacearound
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: space-around;
+    /* indiferente */
+    background-color: #f9eac3;
+    padding: 16px;
+    height: 500px;
+}
+
+.container-align-content-spaceevenly{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: space-evenly;
+    /* indiferente */
+    background-color: #f9eac3;
+    padding: 16px;
+    height: 500px;
 }
